--- a/static/send.html
+++ b/static/send.html
@@ -5,63 +5,141 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.bootcdn.net/ajax/libs/socket.io/4.5.2/socket.io.js"></script>
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <title>Document</title>
     <style>
-      div {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      html,
+      body {
+        background-color: rgb(33, 25, 36);
+        height: 100%;
+      }
+      #me {
+        width: 25%;
+        height: 30%;
+        position: absolute;
+        right: 5%;
+        top: 5%;
+        z-index: 2;
       }
     </style>
   </head>
   <body>
-    <div>
-      <video webkit-playsinline playsinline x5-video-player-type="h5-page" id="me" src="" width="500" height="500"></video>
-      我
-    </div>
-    <div>
-      <video webkit-playsinline playsinline x5-video-player-type="h5-page" id="other" src="" width="500" height="500"></video>
-      对方
-    </div>
+    <video
+      muted
+      autoplay
+      playsinline
+      id="me"
+      src=""
+      width="500"
+      height="500"
+    ></video>
+    <video
+      autoplay
+      playsinline
+      id="other"
+      src=""
+      width="500"
+      height="500"
+    ></video>
+
     <script>
-      const socket = io(`wss://${document.domain}:3000`, {secure: true});
-      async function init() {
-        const pc = new RTCPeerConnection();
-        pc.onicecandidate = async (e) => {
-          // 发送给对端
-          socket.emit("icecandidateP1", e.candidate);
-        };
-        socket.on("icecandidateP2", (candidate) => {
-          pc.addIceCandidate(candidate);
-        });
-        const stream = await navigator.mediaDevices.getUserMedia({
-          video: { facingMode: "user" }, 
-          audio: true,
-        });
-        var video = document.getElementById("me");
-        video.srcObject = stream;
-        video.autoplay = true;
-        stream.getTracks().forEach((track) => pc.addTrack(track, stream));
+      const config = {
+        iceServers: [
+          {
+            url: "turn:124.223.3.119:3478",
+            credential: "123456",
+            username: "demo",
+          },
+        ],
+      };
+      const socket = io(`wss://${document.domain}:3000`, { secure: true });
+      const localVideo = document.getElementById("me");
+      localVideo.setAttribute("playsinline", "");
+      const remoteVideo = document.getElementById("other");
+      const startButton = document.getElementById("startButton");
+      const callButton = document.getElementById("callButton");
+      const hangupButton = document.getElementById("hangupButton");
+      let localStream;
+      let remoteStream;
+      let pc;
+      let offer;
+      let icds = [];
+      let p2Online = false;
 
-        const offer = await pc.createOffer();
-        await pc.setLocalDescription(offer);
+      const width = window.innerWidth;
+      const height = window.innerHeight;
+      remoteVideo.width = width;
+      remoteVideo.height = height;
+
+      socket.on("p2OnLine", () => {
+        p2Online = true;
         socket.emit("offer", offer);
+      });
+      socket.on("icecandidateP2", (newIceCandidate) => {
+        console.log(newIceCandidate);
+        pc.addIceCandidate(newIceCandidate);
+      });
 
+      function startAction() {
+        navigator.mediaDevices
+          .getUserMedia({ video: true, audio: true })
+          .then((mediaStream) => {
+            localVideo.srcObject = mediaStream;
+            localStream = mediaStream;
+            callAction();
+          });
+      }
+
+      function callAction() {
+        pc = new RTCPeerConnection(config);
+
+        pc.addEventListener("icecandidate", handleConnection);
+        pc.addStream(localStream);
+        pc.addEventListener("addstream", gotRemoteMediaStream);
+        pc.createOffer({
+          offerToReceiveVideo: 1,
+        }).then(createdOffer);
+      }
+
+      function gotRemoteMediaStream(event) {
+        const mediaStream = event.stream;
+        remoteVideo.srcObject = mediaStream;
+        remoteStream = mediaStream;
+        console.log(event);
+      }
+
+      function createdOffer(description) {
+        pc.setLocalDescription(description);
+        offer = description;
+        if (p2Online) {
+          socket.emit("offer", description);
+        }
         socket.on("answer", (answer) => {
           pc.setRemoteDescription(answer);
-        });
-
-        pc.addEventListener("track", (e) => {
-          var video = document.getElementById("other");
-          if (e.streams.length > 0) {
-            video.srcObject = null
-            video.play()
-            video.srcObject = e.streams[0];
-            video.autoplay = true;
-          }
+          icds.forEach((icd) => {
+            socket.emit("icecandidateP1", JSON.parse(JSON.stringify(icd)));
+          });
         });
       }
-      init();
+
+      function handleConnection(event) {
+        const peerConnection = event.target;
+        const iceCandidate = event.candidate;
+        if (iceCandidate) {
+          const newIceCandidate = new RTCIceCandidate(iceCandidate);
+          // 传输newIceCandidate给远程pc
+          icds.push(newIceCandidate);
+          if (p2Online) {
+            socket.emit("icecandidateP1", newIceCandidate);
+          }
+        }
+      }
+      startAction();
+      socket.emit("p1OnLine");
     </script>
   </body>
 </html>
