--- a/static/receive.html
+++ b/static/receive.html
@@ -25,7 +25,7 @@
         top: 5%;
         z-index: 2;
       }
-      button {
+      #connect {
         position: absolute;
         left: 50%;
         top: 50%;
@@ -49,10 +49,21 @@
         z-index: 3;
         display: none;
       }
+      #toggleButton {
+        width: 40px;
+        position: absolute;
+        bottom: 11.5%;
+        left: 70%;
+        transform: translate(-50%, 0);
+        cursor: pointer;
+        z-index: 3;
+        display: none;
+      }
     </style>
   </head>
   <body>
     <button id="connect" type="button" onclick="connect()">连接</button>
+    <img id="toggleButton" src="./toggle.png" alt="" />
     <img id="hangupButton" src="./hangup.png" alt="" />
     <video
       muted
@@ -82,10 +93,12 @@
         ],
       };
       const hangupButton = document.getElementById("hangupButton");
+      const toggleButton = document.getElementById("toggleButton");
       const connectButton = document.getElementById("connect");
       const localVideo = document.getElementById("me");
       let remoteVideo = document.getElementById("other");
       hangupButton.addEventListener("click", hangupAction);
+      toggleButton.addEventListener("click", toggle);
       const width = window.innerWidth;
       const height = window.innerHeight;
       remoteVideo.width = width;
@@ -95,12 +108,15 @@
       let remoteStream;
       let permission = false;
       let pc;
+      let camera = 1; // 0, 前置; 1, 后置
       const socket = io(`wss://${document.domain}:3000`, { secure: true });
 
       function startAction() {
         navigator.mediaDevices
           .getUserMedia({
-            video: { facingMode: { exact: "environment" } },
+            video: { 
+              facingMode:  camera ? "environment" : "user" 
+            },
             audio: true,
           })
           .then((mediaStream) => {
@@ -114,8 +130,34 @@
       }
       startAction();
 
+      function toggle() {
+        if (camera == 0) {
+          camera = 1;
+        } else {
+          camera = 0;
+        }
+        localVideo.srcObject = null;
+        navigator.mediaDevices
+          .getUserMedia({
+            video: { 
+              facingMode:  camera ? "environment" : "user" 
+            },
+            audio: true,
+          })
+          .then((mediaStream) => {
+            permission = true;
+            localVideo.srcObject = mediaStream;
+            localStream = mediaStream;
+            pc.getSenders()[1].replaceTrack(localStream.getVideoTracks()[0]);
+          })
+          .catch((e) => {
+            permission = false;
+          });
+      }
+
       socket.on("hangup", () => {
         hangupButton.style.display = "none";
+        toggleButton.style.display = "none";
         remoteVideo.srcObject = null;
         connectButton.style.display = "block";
         pc.close();
@@ -123,6 +165,7 @@
 
       function hangupAction() {
         hangupButton.style.display = "none";
+        toggleButton.style.display = "none";
         remoteVideo.srcObject = null;
         connectButton.style.display = "block";
         pc.close();
@@ -132,6 +175,7 @@
       function connect() {
         connectButton.style.display = "none";
         hangupButton.style.display = "block";
+        toggleButton.style.display = "block";
         socket.emit("p2OnLine");
         pc = new RTCPeerConnection(config);
         pc.addEventListener("icecandidate", handleConnection);
@@ -162,6 +206,7 @@
         }
 
         function gotRemoteMediaStream(event) {
+          console.log(event);
           const mediaStream = event.stream;
           remoteVideo.srcObject = mediaStream;
           remoteStream = mediaStream;
