--- a/static/receive.html
+++ b/static/receive.html
@@ -128,7 +128,7 @@
             permission = false;
           });
       }
-      startAction();
+      
 
       function toggle() {
         if (camera == 0) {
@@ -159,6 +159,7 @@
         hangupButton.style.display = "none";
         toggleButton.style.display = "none";
         remoteVideo.srcObject = null;
+        localVideo.srcObject = null;
         connectButton.style.display = "block";
         pc.close();
       });
@@ -167,12 +168,14 @@
         hangupButton.style.display = "none";
         toggleButton.style.display = "none";
         remoteVideo.srcObject = null;
+        localVideo.srcObject = null;
         connectButton.style.display = "block";
         pc.close();
         socket.emit("hangup");
       }
 
       function connect() {
+        startAction();
         connectButton.style.display = "none";
         hangupButton.style.display = "block";
         toggleButton.style.display = "block";
